force-app/main/default/objects/Concesionario__c/Concesionario__c.object-meta.xml
<CustomObject>
    <description>En este objeto se maneja la información para indicar el concesionario al cual pertenece cada usuario del sistema.</description>
    <label>Concesionario / Vitrina</label>
    <nameField>
        <label>Concesionario motos / Vitrina Autos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concesionarios / Vitrinas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>