force-app/main/default/objects/Concesionario__c/fields/Acumulado_Cuota_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Acumulado_Cuota_Asesor__c</fullName>
    <formula>IF(DATE( YEAR( TODAY() ), MONTH( TODAY() ), 1)= TODAY(),(1* Numero_de_Asesores__c * Cuota_por_Asesor__c ),


((5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATE( YEAR( TODAY() ), MONTH( TODAY() ), 1) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATE( YEAR( TODAY() ), MONTH( TODAY() ), 1) - DATE( 1900, 1, 8), 7 ) ) ))* Cuota_por_Asesor__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acumulado Cuota Asesor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>