force-app/main/default/objects/Concesionario__c/fields/Asesores_comerciales__c.field-meta.xml
<CustomField>
    <fullName>Asesores_comerciales__c</fullName>
    <label>Asesores comerciales</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>