force-app/main/default/objects/Concesionario__c/fields/Auto_Moto__c.field-meta.xml
<CustomField>
    <fullName>Auto_Moto__c</fullName>
    <label>Auto/Moto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Moto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>