force-app/main/default/objects/Concesionario__c/fields/Bodega_Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Bodega_Nuevo__c</fullName>
    <label>Bodega Nuevo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>