force-app/main/default/objects/Concesionario__c/fields/Codigo_concesionario__c.field-meta.xml
<CustomField>
    <fullName>Codigo_concesionario__c</fullName>
    <label>Código concesionario</label>
    <length>5</length>
    <type>Text</type>
</CustomField>