force-app/main/default/objects/Concesionario__c/fields/Codigo_de_agencia__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_agencia__c</fullName>
    <label>Código de agencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>