force-app/main/default/objects/Concesionario__c/fields/Cuota_por_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Cuota_por_Asesor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cuota por Asesor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>