force-app/main/default/objects/Concesionario__c/fields/Direccion_de_agencia__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_agencia__c</fullName>
    <label>Dirección de agencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>