force-app/main/default/objects/Concesionario__c/fields/Es_de_Costa__c.field-meta.xml
<CustomField>
    <fullName>Es_de_Costa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es de Costa</label>
    <type>Checkbox</type>
</CustomField>