force-app/main/default/objects/Concesionario__c/fields/Numero_de_Asesores__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Asesores__c</fullName>
    <defaultValue>0</defaultValue>
    <label># de Asesores</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>