force-app/main/default/objects/Concesionario__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Región</label>
    <length>4</length>
    <type>Text</type>
</CustomField>