force-app/main/default/objects/Concesionario__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Teléfono de agencia</label>
    <type>Phone</type>
</CustomField>