force-app/main/default/objects/Concesionario__c/fields/Tipo_de_Red__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Red__c</fullName>
    <label>Tipo de Red</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fanalca</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Renting Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>