force-app/main/default/objects/Concesionario__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>