force-app/main/default/objects/Concesionario__c/listViews/Concesionarios_Motos.listView-meta.xml
<ListView>
    <fullName>Concesionarios_Motos</fullName>
    <columns>NAME</columns>
    <columns>Auto_Moto__c</columns>
    <columns>Agencia__c</columns>
    <columns>Ciudad__c</columns>
    <columns>Direccion_de_agencia__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Auto_Moto__c</field>
        <operation>notEqual</operation>
        <value>Auto</value>
    </filters>
    <filters>
        <field>Tipo_de_Red__c</field>
        <operation>notEqual</operation>
        <value>Distribuidor</value>
    </filters>
    <label>Concesionarios Motos</label>
</ListView>