force-app/main/default/objects/Concesionario__c/listViews/Vitrinas_Autos.listView-meta.xml
<ListView>
    <fullName>Vitrinas_Autos</fullName>
    <booleanFilter>(1 OR 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>Agencia__c</columns>
    <columns>Auto_Moto__c</columns>
    <columns>Ciudad__c</columns>
    <columns>Direccion_de_agencia__c</columns>
    <columns>Telefono__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Auto</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Punto de</value>
    </filters>
    <label>Vitrinas Autos</label>
</ListView>